Added logic to exclude qids from scan and added logic to dump result into a file